Tue Nov 18 03:23:06 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (check_setter_id): show the original argument instead
	  of nil on TypeError.

Tue Nov 18 03:20:19 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.h (is_{local,global,instance,attrset,const,class,junk}_sym):
	  fix ID type names.

Mon Nov 17 20:17:59 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_event.c: use typed data.

Mon Nov 17 12:54:56 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rubygems/*, test/rubygems/*: Update to RubyGems 2.4.4
	  master (2f6e42e).

Mon Nov 17 06:13:06 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (proc_binding): use the original iseq on a binding from
	  proc from method object to get the location.

Sun Nov 16 19:38:10 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_current_receiver): new function to return the
	  receiver in the current control frame.  [Feature #10195]

Sun Nov 16 19:11:04 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/timeout.rb (Timeout::ExitException#exception): rescue
	  UncaughtThrowError which is specific for throw, instead of
	  ArgumentError.

Sun Nov 16 18:22:18 2014  Eric Wong  <e@80x24.org>

	* tool/update-deps: warning to disable ccache

Sun Nov 16 13:11:35 2014  Tanaka Akira  <akr@fsij.org>

	* common.mk (CCAN_LIST_INCLUDES): Unused variable removed.
	  (ENCODING_H_INCLUDES): Ditto.
	  (PROBES_H_INCLUDES): Ditto.
	  (VM_CORE_H_INCLUDES): Ditto.

Sun Nov 16 11:07:25 2014  Eric Wong  <e@80x24.org>

	* test/ruby/test_io.rb (test_readpartial_locktmp):
	  remove unnecessary begin/end

Sun Nov 16 00:45:23 2014  Tanaka Akira  <akr@fsij.org>

	* common.mk: Specify dependencies for generated C sources.

Sat Nov 15 23:10:45 2014  Tanaka Akira  <akr@fsij.org>

	* common.mk: No need to declare dependencies which
	  will be detected by inference rules.

Sat Nov 15 20:34:23 2014  Tanaka Akira  <akr@fsij.org>

	* internal.h: Include ruby.h and ruby/encoding.h to be